--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Swimming, boating, farming, art, cooking, reading</p>
       <h1>What's your dream job?</h1>
-      <p>DLiving it up</p>
+      <p>Living it up</p>
       <h1>Where do you live?</h1>
       <p>Punta Gorda, Belize</p>
       <h1>Why do you want to be a web developer?</h1>
